# supargus

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COMMANDS.md  INSTALL.md  PRIVACY_MODEL.md  PRODUCT_FLOW.md  ROADMAP.md
src/supargus/: __init__.py  action_plan.py  app.py  broker.py  bundle.py  cli.py  config.py  custom.py  desktop.py  forms.py  identity.py  mailer.py  models.py  monitor.py  registry.py  report.py  review.py  schedule.py  shortcut.py  takedown.py  tracker.py  vault.py  watchdog.py  workflow.py
src/supargus/data/: default_brokers.json
tests/: test_core.py
