[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supargus"
version = "0.1.0"
description = "Local-first privacy watchdog: broker evidence, takedown workflow, and machine privacy checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lachydotmcg" }]
keywords = ["privacy", "osint", "data-brokers", "takedown", "watchdog", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0"]

[project.scripts]
supargus = "supargus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supargus = ["data/*.json"]

